--- a/stylesheets/base.css
+++ b/stylesheets/base.css
@@ -12,13 +12,14 @@ h1 {
 
 /* KAITLYN AND MATT*/
 
-body {
+.map {
   background: url(../images/map.jpg);
+  background-repeat: no-repeat;
   background-size: cover;
   background-position: 50% 0;
+  padding: 1em 0;
 }
-main {
-  display: block;
+.welcome {
   max-width: 500px;
   padding: 0 2.5%;
   margin: 1em auto;
