--- a/stylesheets/base.css
+++ b/stylesheets/base.css
@@ -59,5 +59,42 @@ h3 {
 section {
   max-width: 940px;
   margin: 0 auto;
-  padding: 0 2.5%;
+  padding: 1em 2.5%;
+  border-bottom: 1px solid #ccc;
+  overflow: auto;
+}
+
+
+/* THE WEDDING WEEKEND */
+.wedding-weekend-day {
+  float: left;
+  width: 48.936170213%;
+}
+.friday {
+  margin-right: 2.1276595745%;
+}
+.wedding-weekend-day h3 {
+  font-weight: 400;
+  margin-top: 0;
+}
+.wedding-weekend-day td {
+  padding-bottom: 0.5em;
+}
+.time {
+  padding-right: 0.5em;
+  font-weight: 400;
+}
+.wedding-event {
+  display: block;
+  font-weight: 400;
+}
+@media (max-width: 650px) {
+  .wedding-weekend-day, .friday {
+    float: none;
+    width: 100%;
+    margin-right: 0;
+  }
+  .wedding-weekend-day h3 {
+    margin-top: 1rem;
+  }
 }
