--- a/stylesheets/base.css
+++ b/stylesheets/base.css
@@ -16,6 +16,10 @@ h2 {
 }
 h3 {
   font-size: 1.25rem;
+  font-weight: 400;
+}
+em {
+  font-weight: 400;
 }
 
 /* KAITLYN AND MATT */
@@ -66,6 +70,7 @@ section {
 
 
 /* THE WEDDING WEEKEND */
+
 .wedding-weekend-day {
   float: left;
   width: 48.936170213%;
@@ -74,7 +79,6 @@ section {
   margin-right: 2.1276595745%;
 }
 .wedding-weekend-day h3 {
-  font-weight: 400;
   margin-top: 0;
 }
 .wedding-weekend-day td {
@@ -97,4 +101,20 @@ section {
   .wedding-weekend-day h3 {
     margin-top: 1rem;
   }
+}
+
+/* TRAVEL AND ACCOMMODATIONS */
+
+.hotels {
+  overflow: auto;
+}
+.hotels li {
+  display: block;
+  float: left;
+  margin-right: 2em;
+  margin-bottom: 1em;
+}
+.hotel-name {
+  font-weight: 400;
+  display: block;
 }
