support IE by switching from rem to em

--- a/stylesheets/base.css
+++ b/stylesheets/base.css
@@ -1,7 +1,7 @@
 /* GENERAL TEXT */
 
 p, h1, h2, h3, ul {
-  margin: 1rem 0;
+  margin: 1em 0;
 }
 body {
   line-height: 1.25;
@@ -9,20 +9,20 @@ body {
   font-weight: 300;
 }
 h1 {
-  font-size: 2rem;
+  font-size: 2em;
 }
 h2 {
-  font-size: 1.5rem;
+  font-size: 1.5em;
 }
 h3 {
-  font-size: 1.25rem;
+  font-size: 1.25em;
   font-weight: 400;
 }
 em {
   font-weight: 400;
 }
 dd {
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.5em;
 }
 
 /* KAITLYN AND MATT */
@@ -130,7 +130,7 @@ section {
     margin-right: 0;
   }
   .wedding-weekend-day h3 {
-    margin-top: 1rem;
+    margin-top: 1em;
   }
 }
 
