add labels to map

--- a/stylesheets/base.css
+++ b/stylesheets/base.css
@@ -28,7 +28,7 @@ dd {
 /* KAITLYN AND MATT */
 
 #map {
-  background: url(../images/map.jpg);
+  background: url(../images/map-with-labels.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 50% 0;
